# OpenAIReview

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: paper_review.md
.claude/commands/openaireview/: SKILL.md
.claude/commands/openaireview/references/: criteria.md  subagent_templates.md
.claude/commands/openaireview/scripts/: save_viz_json.py
.github/workflows/: publish.yml
benchmarks/: PLAN.md  REPORT.md  run_benchmark.py  seed_errors.py
benchmarks/data/: benchmark.jsonl
benchmarks/scripts/: generate_viz_data.py  parse_examples.py  reevaluate.py  reorganize_viz_data.py  run_experiments.py
benchmarks/viz_data/: chaotic-balanced-state.json  coset-codes.json  data.json  index.json  inference-molecular.json  targeting-interventions-networks.json
docs/rfcs/: 001-mistral-ocr.md  002-structured-reviewer.md  003-evaluation-redesign.md
examples/review_results/: 260218458v1.json  260218458v1_skill.json  apep-0001-pdf.json  apep-0001-tex.json  smoothing-shifts-pdf.json
src/openaireview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/reviewer/: cli.py  client.py  evaluate.py  method_debate.py  method_incremental.py  method_local.py  method_progressive.py  method_rag.py  method_zero_shot.py  models.py  ocr_postprocess.py  parsers.py  prompts.py  serve.py  utils.py
src/reviewer/skill/: SKILL.md
src/reviewer/skill/references/: criteria.md  subagent_templates.md
src/reviewer/skill/scripts/: consolidate_comments.py  (+2 more)
src/reviewer/viz/: index.html
tests/: test_ocr.py  test_review_integration.py
